--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,72 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 30px;
   background-color: var(--bg-color);
+}
+
+a {
+  text-decoration: none;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar {
+  background: green;
+  display: flex;
+}
+
+.navbar-menu {
+  padding: 15px 20px;
+  color: white;
+  cursor: pointer;
+}
+
+.navbar-menu:hover, .navbar-menu.active {
+  background-color: rgb(21, 75, 21);
+}
+
+.table-container {
+  padding: 20px;
+  overflow: auto;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid black;
+  text-align: left;
+  padding: 10px 20px;
+}
+
+.add-form {
+  display: block;
+  width: 100%;
+  max-width: 500px;
+  margin: 30px auto;
+}
+
+.form-control {
+  width: 100%;
+  height: 30px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 0 10px;
+  margin-bottom: 10px;
+}
+
+.form-control:focus {
+  outline: none;
+}
+
+button {
+  background-color: green;
+  color: white;
+  border: none;
+  padding: 10px 20px;
 }
